syntax = "proto3";

package employeePackage;

service EmployeeService {
	rpc GetAllEmployee (Empty) returns (EmployeeList) {}
	rpc GetEmployee (EmployeeId) returns (EmployeeWithId) {}
	rpc CreateEmployee (Employee) returns (Employee) {}
	rpc UpdateEmployee (EmployeeWithId) returns (Employee) {}
	rpc DeleteEmployee (EmployeeId) returns (Empty) {}
}

message Empty {}

message Employee {
	string avatar = 1;
	string name = 2;
	string email = 3;
	string phone = 4;
	string role = 5;
	string position = 6;
	string status = 7;
}

message EmployeeWithId {
	string _id = 1;
	string avatar = 2;
	string name = 3;
	string email = 4;
	string phone = 5;
	string role = 6;
	string position = 7;
	string status = 8;
}

message EmployeeId {
	string id = 1;
}

message EmployeeList {
	repeated EmployeeWithId employees = 1;
}

message Response {
	string status = 1;
}